--- a/style.css
+++ b/style.css
@@ -1,95 +1,139 @@
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;700&family=Inter:wght@400;700;800&family=Kumbh+Sans:wght@400;700&family=Lexend+Deca:wght@300;400;700&family=Open+Sans:wght@400;500;600;700;800&family=Outfit:wght@300;400;600&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&family=Public+Sans:wght@100;300;500;600;800;900&family=Red+Hat+Display:wght@500;700;900&family=Work+Sans:wght@200;300;400;500;600;700;800;900&display=swap');
+
+/* Global styles */
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  text-transform: capitalize;
-  margin:0;
-  padding:0;
+  text-decoration: none;
+  transition: .4s;
 }
+
 body {
-  background-color: rgb(26, 34, 39);
-  font-family: 'Cairo', sans-serif;
-  font-family: 'Open Sans', sans-serif;
-  font-family: 'Poppins', sans-serif;
-}
-.card {
-  position: relative;
-  padding-top: 150px;
-  padding-bottom: 150px;
-  display: flex;
-  align-items: center;
-  align-items: center;
-}
-.card .container {
-  padding:0 15px;
-  margin:0 auto;
-}
-.card-container {
-  background-color: rgb(26, 31, 39);
-  border-radius: 10px;
-  box-shadow: 5px 5px 20px #000;
-  max-width:350px;
-}
-.card-container .content {
+  background: hsl(217, 54%, 11%);
+  font-family: 'Outfit', sans-serif;
+  font-size: 16px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  margin:10px auto;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
-.card-container .content > img {
-  padding-top:20px;
-  border-radius:10px;
-  width:300px;
-  height:300px;
-  margin:0 auto;
+
+/* Start styling the card component */
+.card {
+  max-width: 21.875rem;
+  margin: 0 auto;
 }
-.card-container .content h2 {
-  color:#fff;
-  font-weight: bold;
-  font-size: 22px;
-  padding-top: 15px;
-  margin-left:25px;
+
+.card .container {
+  margin: 2rem 1rem;
+  padding: 1.25rem;
+  background-color: hsl(216, 50%, 16%);
+  border-radius: 1rem;
+  box-shadow: 0px 0px 30px 5px rgba(0,0,0,0.75);
 }
-.card-container .content p {
-  color:#555;
-  font-size:17px;
-  margin-left:20px;
-  padding-top:20px;
-  font-weight:500;
+
+/* The Beginning: The most important part to me in this design */
+.container .header-img {
+  border-radius: .875rem;
+  overflow: hidden;
+  position: relative;
 }
-.card-container .content .time {
+
+.container .header-img img {
+  width: 100%;
+  display: block;
+}
+/* I've done this many times and i forgot how to do it */
+.container .header-img .overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: hsla(178, 100%, 50%, 0.5);
+  display: none;
+}
+.container .header-img .overlay img {
+  position: absolute;
+  width: 3.125rem;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.header-img:hover .overlay{
+  display: block;
+}
+/* The End: The most important part to me in this design */
+.container .info {
+  padding: 1.25rem 0;
+}
+
+.container .info a {
+  color: #fff;
+  font-weight: 600;
+  font-size: 1.25rem;
+  padding: 1.25rem 0;
+}
+
+.container .info a:hover {
+  color: hsl(178, 100%, 50%);
+}
+
+.container .info p {
+  color: hsl(215, 51%, 70%);
+  line-height: 1.4;
+  padding: 1.25rem 0;
+}
+
+.container .flex {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin:0 20px;
-  padding:20px 0;
-  color:#fff;
-  font-size:20px;
-  border-bottom: 1px solid #555;
+  margin-top: -10px;
 }
-.card-container .content .time span:first-of-type {
-  color:rgba(0, 255, 238, 0.723);
-  font-weight: 600;
-  text-transform: uppercase;
-}
-.card-container .content .time span:nth-of-type(2){
-  text-transform: lowercase;
-  color:#555;
-  font-weight: 500;
-}
-.card-container .content .footer {
+
+.eth, .days {
   display: flex;
-  padding: 20px 0 40px;
-  margin-left:20px;
+  align-items: center;
 }
-.card .footer img {
-  height:45px;
-  border:2px solid #fff;
+
+.flex .eth p {
+  color: hsl(178, 100%, 50%);
+  font-weight: 600;
+  padding-left: .4rem;
+}
+
+.flex .days p {
+  padding-left: .4rem;
+}
+
+hr{
+  border-color: hsl(215, 32%, 27%);
+}
+
+.container .footer {
+  display: flex;
+  align-items: center;
+  padding-top: .25rem;
+  margin-bottom: -25px;
+}
+
+.container .footer img {
+  width: 2rem;
   border-radius: 50%;
+  border: .0625rem solid #fff;
+  margin-right: 1rem;
 }
-.card .footer p {
-  margin-top: -5px;
-  color:#555;
-  font-size: 15px;
+
+.container .footer p a {
+  color: #fff;
+  font-size: 1rem;
+  margin-left: .25rem;
 }
-.card .footer p span {
-  color:rgb(202, 199, 199);
+
+.container .footer p a:hover {
+  color: hsl(178, 100%, 50%);
 }
+/* End styling the card component */
